kubernetes/frontend-blue-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-blue
  namespace: garage-manager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      version: blue
  template:
    metadata:
      labels:
        app: frontend
        version: blue
    spec:
      containers:
        - name: frontend
          image: garage-manager-frontend:v1.0  # Image de la version stable (Blue)
          ports:
            - containerPort: 3000
