kubernetes/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: redis-mtls
  namespace: garage-manager
spec:
  host: redis
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
