kubernetes/frontend-virtualservice-circuit-breaker.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: garage-manager
spec:
  hosts:
    - frontend
  http:
    - route:
        - destination:
            host: frontend
            subset: v1
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx
