kubernetes/frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: garage-manager
spec:
  hosts:
    - frontend
  http:
    - route:
        - destination:
            host: frontend
            subset: blue
          weight: 90
        - destination:
            host: frontend
            subset: canary
          weight: 10
